Many changes e.g. design reform (incl. proper mobile support), permission system

--- a/src/license.html
+++ b/src/license.html
@@ -36,6 +36,7 @@ Copyright testwiki all rights reserved.
     </li>
     <li>Diff</li>
     <li>date-and-time</li>
+    <li>Font awesome</li>
 </ul>
 
 <pre>
