--- a/src/license.html
+++ b/src/license.html
@@ -1,5 +1,5 @@
-<h2>testwiki v0.1 alpha</h2>
-<p>Copyright © testwiki all rights reserved.</p>
+<h2>GECWiki v0.2</h2>
+<p>Copyright © GECWiki all rights reserved.</p>
 <h2>Open source licence</h2>
 <ul>
     <li>
