--- a/src/license.html
+++ b/src/license.html
@@ -1,5 +1,5 @@
-<h2>GECWiki v0.3a</h2>
-<p>Copyright © GECWiki all rights reserved.</p>
+<h2>GECWiki v0.4</h2>
+<p>Copyright &copy; GECWiki all rights reserved.</p>
 <h2>Open source licence</h2>
 <ul>
     <li>
