--- a/src/license.html
+++ b/src/license.html
@@ -1,4 +1,4 @@
-<h2>GECWiki v0.7</h2>
+<h2>GECWiki v0.8</h2>
 <p>Copyright &copy; GECWiki all rights reserved.</p>
 <h2>Open source licence</h2>
 <ul>
@@ -79,5 +79,8 @@
     </li>
     <li>
         <a href='https://jquery.com/'>JQuery</a> (<a href='https://jquery.org/license/'>Licence</a>)
+    </li>
+    <li>
+        <a href='https://socket.io/'>socket.io</a> (<a href='https://github.com/socketio/socket.io/blob/master/LICENSE'>Licence</a>)
     </li>
 </ul>
