--- a/src/license.html
+++ b/src/license.html
@@ -1,4 +1,4 @@
-<h2>GECWiki v0.8c</h2>
+<h2>GECWiki v0.9</h2>
 <p>Copyright &copy; GECWiki all rights reserved.</p>
 <h2>Open source licence</h2>
 <ul>
