--- a/src/csrfError.html
+++ b/src/csrfError.html
@@ -1,6 +1,6 @@
 <p>CSRF Token does not match. This may be caused by:</p>
 <ol>
-    <li>opening different pages whilst editing or</li>
+    <li>opening different pages whilst editing, or</li>
     <li>cookie being disabled on your browser (In this instance, please enable it).</li>
 </ol>
 <p>You can <a href='javascript:window.history.back()'>go back to the previous page</a>. Please save any changes you have made (for example, copy the edit made into separate places), reload the page, make any changes again (if discarded) and submit the form again.</p>
