--- a/src/license.html
+++ b/src/license.html
@@ -1,110 +1,49 @@
-<h2>AkariEngine v1.1</h2>
-<p>Copyright GECWiki 2021 all rights reserved.<br><small>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</small></p>
+<h2>AkariEngine v1.2</h2>
+<p>Copyright <a href='mailto:admin@gecwiki.kr'>GECWiki</a> 2021 all rights reserved.<br><small>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</small></p>
 <h2>Open source licence</h2>
 <ul>
     <li>
-        <a href='https://getbootstrap.com/'>Bootstrap</a> by Twitter, Inc. and the Bootstrap Authrors.
-        <pre>
-            The MIT License (MIT)
-
-            Copyright (c) 2011-2021 Twitter, Inc.
-            Copyright (c) 2011-2021 The Bootstrap Authors
-
-            Permission is hereby granted, free of charge, to any person obtaining a copy
-            of this software and associated documentation files (the "Software"), to deal
-            in the Software without restriction, including without limitation the rights
-            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-            copies of the Software, and to permit persons to whom the Software is
-            furnished to do so, subject to the following conditions:
-
-            The above copyright notice and this permission notice shall be included in
-            all copies or substantial portions of the Software.
-
-            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-            THE SOFTWARE.
-        </pre>
+        <a href='https://getbootstrap.com/'>Bootstrap</a>
+        <br>
+        Twitter, Inc. and the Bootstrap Authrors.
+        <br>
+        MIT Licence
     </li>
-    <li>Font Awesome by Dave Gandy - <a href='http://fontawesome.io'>http://fontawesome.io</a></li>
+        <li>Font Awesome <a href='http://fontawesome.io'>http://fontawesome.io</a>
+        <br>
+        Dave Gandy
+        <br>
+        SIL OFL 1.1, MIT Licence
+    </li>
     <li>
-        <a href='https://www.npmjs.com/package/diff2html'>diff2html</a>
-        <pre>
-            Copyright 2014-2016 Rodrigo Fernandes https://rtfpessoa.github.io/
-
-            Permission is hereby granted, free of charge, to any person obtaining a copy
-            of this software and associated documentation files (the "Software"), to deal
-            in the Software without restriction, including without limitation the rights
-            to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-            copies of the Software, and to permit persons to whom the Software is
-            furnished to do so, subject to the following conditions:
-
-            The above copyright notice and this permission notice shall be included in
-            all copies or substantial portions of the Software.
-
-            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-            IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-            FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-            AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-            LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-            OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-            THE SOFTWARE.
-        </pre>
+        <a href='https://github.com/rtfpessoa/diff2html'>diff2html</a>
+        <br>
+        Rodrigo Fernandes
+        <br>
+        MIT Licence
     </li>
     <li>
         <a href='https://jqueryui.com/'>Jquery UI</a>
-        <pre>
-            Permission is hereby granted, free of charge, to any person obtaining
-            a copy of this software and associated documentation files (the
-            "Software"), to deal in the Software without restriction, including
-            without limitation the rights to use, copy, modify, merge, publish,
-            distribute, sublicense, and/or sell copies of the Software, and to
-            permit persons to whom the Software is furnished to do so, subject to
-            the following conditions:
-
-            The above copyright notice and this permission notice shall be
-            included in all copies or substantial portions of the Software.
-
-            THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-            EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-            MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-            NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
-            LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
-            OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
-            WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-        </pre>
+        <br>
+        jQuery Foundation and other contributors
+        <br>
+        MIT Licence
     </li>
     <li>
-        <a href='https://jquery.com/'>JQuery</a> (<a href='https://jquery.org/license/'>Licence</a>)
+        <a href='https://jquery.com/'>JQuery</a>
+        <br>
+        MIT Licence
     </li>
     <li>
         <a href='https://socket.io/'>socket.io</a>
-        <pre>
-            (The MIT License)
-
-            Copyright (c) 2014-2018 Automattic &lt;dev@cloudup.com&gt;
-
-            Permission is hereby granted, free of charge, to any person obtaining
-            a copy of this software and associated documentation files (the
-            'Software'), to deal in the Software without restriction, including
-            without limitation the rights to use, copy, modify, merge, publish,
-            distribute, sublicense, and/or sell copies of the Software, and to
-            permit persons to whom the Software is furnished to do so, subject to
-            the following conditions:
-
-            The above copyright notice and this permission notice shall be
-            included in all copies or substantial portions of the Software.
-
-            THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
-            EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-            MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
-            IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-            CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
-            TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
-            SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-        </pre>
+        <br>
+        MIT Licence
+    </li>
+    <li>
+        <a href=''><span class='math'>\large\KaTeX</span></a>
+        <br>
+        Khan Academy
+        <br>
+        MIT Licence
     </li>
 </ul>
