--- a/src/license.html
+++ b/src/license.html
@@ -1,4 +1,4 @@
-<h2>AkariEngine v1.3a</h2>
+<h2>AkariEngine v1.4</h2>
 <p>Copyright <a href='mailto:admin@gecwiki.kr'>GECWiki</a> 2021 all rights reserved.<br><small>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</small></p>
 <h2>Open source licence</h2>
 <ul>
