--- a/src/license.html
+++ b/src/license.html
@@ -1,5 +1,9 @@
-<h2>AkariEngine v1.4</h2>
-<p>Copyright <a href='mailto:admin@gecwiki.kr'>GECWiki</a> 2021 all rights reserved.<br><small>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</small></p>
+<h2><a href='https://github.com/kbmin24/AkariEngine'>AkariEngine</a> v1.4a</h2>
+<p>Copyright GECWiki 2021.</p>
+<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
+<p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.</p>
+<p>You should have received a copy of the GNU Affero General Public License along with this program. If not, <a href='https://www.gnu.org/licenses/'>read online</a>.</p>
+<p style='font-size: 10px'>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</p>
 <h2>Open source licence</h2>
 <ul>
     <li>
