--- a/src/license.html
+++ b/src/license.html
@@ -1,4 +1,4 @@
-<h2>AkariEngine v1.4a</h2>
+<h2>AkariEngine v1.4b</h2>
 <p>Copyright GECWiki 2021-2022 all rights reserved.</p>
 <p><small>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</small></p>
 <h2>Open source licence</h2>
