--- a/src/license.html
+++ b/src/license.html
@@ -1,4 +1,4 @@
-<h2>AkariEngine v1.4c</h2>
+<h2>AkariEngine v1.5</h2>
 <p>Copyright GECWiki 2021-2022 all rights reserved.</p>
 <p><small>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</small></p>
 <h2>Open source licence</h2>
@@ -44,6 +44,13 @@
         <a href=''><span class='math'>\large\KaTeX</span></a>
         <br>
         Khan Academy
+        <br>
+        MIT Licence
+    </li>
+    <li>
+        <a href='https://github.com/vinorodrigues/bootstrap-dark-5'>bootstrap-dark-5</a>
+        <br>
+        Vino Rodrigues
         <br>
         MIT Licence
     </li>
