--- a/src/license.html
+++ b/src/license.html
@@ -54,4 +54,11 @@
         <br>
         MIT Licence
     </li>
+    <li>
+        <a href='https://gitlab.com/librewiki/Liberty-MW-Skin'>Liberty-MW-Skin</a>
+        <br>
+        librewiki
+        <br>
+        GNU GPL version 3
+    </li>
 </ul>
