--- a/src/license.html
+++ b/src/license.html
@@ -57,7 +57,7 @@
     <li>
         <a href='https://gitlab.com/librewiki/Liberty-MW-Skin'>Liberty-MW-Skin</a>
         <br>
-        librewiki
+        Librewiki
         <br>
         GNU GPL version 3
     </li>
