--- a/src/csrfError.html
+++ b/src/csrfError.html
@@ -1,6 +1,6 @@
-<p>CSRF Token does not match. This may be caused by:</p>
+<p>CSRF 토큰이 일치하지 않습니다. 이 문제의 흔한 원인은 다음과 같습니다.</p>
 <ol>
-    <li>opening different pages whilst editing, or</li>
-    <li>cookie being disabled on your browser (In this instance, please enable it).</li>
+    <li>문서 편집 도중 다른 위키 페이지를 열음</li>
+    <li>웹브라우저에서 쿠키를 허용하지 않음 (이 경우 쿠키를 허용해 주세요)</li>
 </ol>
-<p>You can <a href='javascript:window.history.back()'>go back to the previous page</a>. Please save any changes you have made (for example, copy the edit made into separate places), reload the page, make any changes again (if discarded) and submit the form again.</p>
+<p><a href='javascript:window.history.back()'>이전 페이지</a>로 돌아갈 수 있습니다. 편집 내용과 같은 변경 사항을 전부 저장하고 페이지를 새로고침하여 다시 시도해 주세요.</p>
