--- a/src/license.html
+++ b/src/license.html
@@ -1,5 +1,9 @@
 <h2>AkariEngine 2.5a</h2>
-<p>Copyright GECWiki 2021-2022 all rights reserved.</p>
+<p>Copyright Kyubin Min 2021-2022.</p>
+<p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
+<p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public License for more details.</p>
+<p>You should have received a copy of the GNU Affero General Public License along with this program. If not, <a href='https://www.gnu.org/licenses/'>read online</a>.</p>
+<p>The source code of this software is available <a href='https://github.com/kbmin24/AkariEngine'>here</a>.</p>
 <p><small>AkariEngine is dedicated to <a href='https://yuruyuri.fandom.com/wiki/Akari_Akaza'>Akaza Akari</a>.</small></p>
 <h2>Open source licence</h2>
 <ul>
